--- a/templates/ticket.ejs
+++ b/templates/ticket.ejs
@@ -121,7 +121,7 @@ margin-right: 10px;    }
     </div>
 
     <div class="ticket">
-      Ticket Number: PEM01/<%= new Date().toLocaleDateString('en-GB') %>
+  Ticket Number: <%= ticketNo %>
     </div>
 
     <div class="info">
