--- a/templates/ticket.ejs
+++ b/templates/ticket.ejs
@@ -16,9 +16,10 @@
       background: #ffffff;
       color: #333;
       padding: 40px 20px;
-      display: flex;
+
+  display: block; 
+
       justify-content: center;
-      align-items: center;
       line-height: 1.6;
     }
 
