--- a/templates/ticket.ejs
+++ b/templates/ticket.ejs
@@ -134,6 +134,9 @@
       <p><span class="label">Mobile:</span> <%= mobile %></p>
       <p><span class="label">Email:</span> <%= email %></p>
       <p><span class="label">Membership:</span> <%= category %></p>
+      <p><span class="label">Price:</span> ₹<%= price %></p>
+<p><span class="label">Payment Status:</span> <%= paymentStatus %></p>
+
     </div>
 
     <div class="extra">
